--- a/index.html
+++ b/index.html
@@ -700,16 +700,16 @@
                         </div>
                         <div class="contactfooterdiv">
                             <div class="contactlinks">
-                                <div class="contactoptlogodiv inthemeb" onclick="window.open(`mailto:shashankmankala.5@gmail.com`, '_blank');">
+                                <div class="contactoptlogodiv inthemeb" title="Email" onclick="window.open(`mailto:shashankmankala.5@gmail.com`, '_blank');">
                                     <i class="fas fa-envelope"></i>
                                 </div>
-                                <div class="contactoptlogodiv inthemeb" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');">
+                                <div class="contactoptlogodiv inthemeb" title="GitHub" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');">
                                     <i class="fab fa-github"></i>
                                 </div>
-                                <div class="contactoptlogodiv inthemeb" onclick="window.open(`https://www.linkedin.com/in/shashankmankala/`, '_blank');">
+                                <div class="contactoptlogodiv inthemeb" title="LinkedIn" onclick="window.open(`https://www.linkedin.com/in/shashankmankala/`, '_blank');">
                                     <i class="fab fa-linkedin-in"></i>
                                 </div>
-                                <div class="contactoptlogodiv inthemeb">
+                                <div class="contactoptlogodiv inthemeb" title="Twitter">
                                     <i class="fab fa-twitter"></i>
                                 </div>
                             </div>
