--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                         </div>
                     </div>
                     <div class="contactfooter">
-                        <p>Copyright 2021 &copy; reserved | Designed by M Shashank</p>
+                        <p>Copyright &copy; 2021 All rights reserved | Designed by M Shashank</p>
                     </div>
                 </div>
             </section>
