--- a/Feedback.html
+++ b/Feedback.html
@@ -17,7 +17,7 @@
     <div class="feedbackformdiv">
         <div class="formdiv1">
             <form class="formdiv" target="hidden_iframe" onsubmit="submitted=true"
-                action="https://docs.google.com/forms/d/e/1FAIpQLSet0VSzz6DGFFazhWdPn7iPMFggiLbprqU8b47orBbk_dAoDA/viewform"
+                action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSet0VSzz6DGFFazhWdPn7iPMFggiLbprqU8b47orBbk_dAoDA/formResponse"
                 method="POST" target="_self">
                 <label for="name" class="feedbacklabels"><b>Name</b></label>
                 <input class="inpf" type="text" id="name" placeholder="Enter your name" name="entry.1893403539"
@@ -30,7 +30,7 @@
                 <label for="rating" class="feedbacklabels"><b> How much you would rate my website ? </b></label>
                 <div class="ratingdiv">
                     <p class="ratingnum">0</p><input type="range" name="entry.1318793904" id="rating" min="0" max="5"
-                        step="1" value="5" onclick="viewrating();" onmouseover="cursoron();" required />
+                        step="1" value="5" required />
                     <p class="ratingnum">5</p>
                 </div>
 
