added typed text

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <div class="panelbtndiv">
                     <div class="panelbtn" id="panelbtn">
                         <div class="panelbtncolor" id="panelbtncolor">
-
+                            <i class="fas fa-cog fa-spin"></i>
                         </div>
                     </div>
                 </div>
@@ -223,7 +223,8 @@
                 <div class="toppcontainer">
                     <h2>There are three responses to completion of work <br>&nbsp;
                         <span class="inthemeb"> — yes, no, and WOW! </span> <br>
-                        <span class="txtbg">Wow is the one</span> I aim for.
+                        <span class="txtbg"></span>
+                        <span class="typing"></span>
                     </h2>
                 </div>
             </section>
@@ -908,6 +909,7 @@
         </div>
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <script type="text/javascript" src="js/index.js"></script>
 
 </html>
