--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <link rel="icon" type="image/png" href="img/mylogo1.png">
     <title>Shashank Mankala | Computer Science Engineer</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <!-- <link rel="stylesheet" media="screen and (max-width:1328px)" href="css/small1.css">
     <link rel="stylesheet" media="screen and (max-width:1153px)" href="css/small1-1.css">
     <link rel="stylesheet" media="screen and (max-width:1092px)" href="css/small2.css">
@@ -255,10 +255,10 @@
                 </div>
                 <div class="prcontainer">
                     <div class="prcontent">
-                        <div class="prs">
+                        <div class="prs" id="prs1">
                             <div class="prsonoff" id="prsonoff1">
                                 <div class="prgif" id="prgif1">
-                                    <img src="img/fb.gif" alt="" class="prgifgif">
+                                    <img src="img/f1.png" alt="" class="prgifgif" id="prgifgif1">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle1">
                                     <p id="prp1">Facebook Clone</p>
@@ -294,10 +294,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs">
+                        <div class="prs" id="prs2">
                             <div class="prsonoff" id="prsonoff2">
                                 <div class="prgif" id="prgif2">
-                                    <img src="img/mp.gif" alt="" class="prgifgif">
+                                    <img src="img/mp1.webp" alt="" class="prgifgif" id="prgifgif2">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle2">
                                     <p id="prp2">Music Player</p>
@@ -337,10 +337,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs">
+                        <div class="prs" id="prs3">
                             <div class="prsonoff" id="prsonoff3">
                                 <div class="prgif" id="prgif3">
-                                    <img src="img/coup.gif" alt="" class="prgifgif">
+                                    <img src="img/c1.png" alt="" class="prgifgif" id="prgifgif3">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle3">
                                     <p id="prp3">Corona Live Update</p>
@@ -377,10 +377,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs">
+                        <div class="prs" id="prs4">
                             <div class="prsonoff" id="prsonoff4">
                                 <div class="prgif" id="prgif4">
-                                    <img src="img/meals.gif" alt="" class="prgifgif">
+                                    <img src="img/m1.webp" alt="" class="prgifgif" id="prgifgif4">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle4">
                                     <p id="prp4">Meals website</p>
@@ -420,10 +420,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs">
+                        <div class="prs" id="prs5">
                             <div class="prsonoff" id="prsonoff5">
                                 <div class="prgif" id="prgif5">
-                                    <img src="img/todo.gif" alt="" class="prgifgif">
+                                    <img src="img/t1.webp" alt="" class="prgifgif" id="prgifgif5">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle5">
                                     <p id="prp5">Todo checklist</p>
@@ -463,10 +463,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs">
+                        <div class="prs" id="prs6">
                             <div class="prsonoff" id="prsonoff6">
                                 <div class="prgif" id="prgif6">
-                                    <img src="img/employeeManag.png" alt="" class="prgifgif">
+                                    <img src="img/employeeManag.png" alt="" class="prgifgif" id="prgifgif6">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle6">
                                     <p id="prp6">Employee Recruitment System</p>
@@ -505,10 +505,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs" id="prs">
+                        <div class="prs" id="prs7">
                             <div class="prsonoff" id="prsonoff7">
                                 <div class="prgif" id="prgif7">
-                                    <img src="img/incometax.gif" alt="" class="prgifgif">
+                                    <img src="img/i1.webp" alt="" class="prgifgif" id="prgifgif7">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitle7">
                                     <p id="prp7">Income Tax</p>
@@ -850,7 +850,7 @@
                     </div>
                     <div class="sharelinkdiv">
                         <img src="img/qrcode.png" alt="qrcode" id="qrcodeimg" style="display: none;">
-                        <img src="img/send1.gif" alt="" class="sharebtn" id="sharebtn">
+                        <img src="img/send1-8.webp" alt="" class="sharebtn" id="sharebtn">
                         <div class="shareask" id="shareask">
                             <div class="sharelinkdivclose">
                                 <i class="fas fa-times shareclosei" id="shareclosei" style="float: right;"></i>
@@ -909,6 +909,6 @@
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/index.min.js"></script>
 
 </html>
