--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
+    <meta property="og:description" content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta property="og:site_name" content="" />
     <meta property="og:title" content="">
-    <meta property="og:description" content="">
     <meta property="og:image" itemprop="image"
         content="https://drive.google.com/file/d/1BAB-UlHK7BsZkCo5Cx5pQX-ugf2bcAXr/view?usp=sharing">
     <link itemprop="thumbnailUrl"
@@ -242,23 +242,19 @@
                 </div>
                 <div class="aboutcontent">
                     <div class="abouttxt">
-                        <p>I am currently pursuing my Bachelor's degree in Computer Science from Lovely Professional
+                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp;I am currently pursuing my Bachelor's degree in Computer Science from Lovely Professional
                             University, Punjab. I’m excited to find a role where I can accomplish my goals and expand 
                             my current skillset while also learning, growing and contributing to a great organization
                             that aligns with my values.</p>
-                        <br>
-                        <p>A CSE undergraduate student with good algorithmic and problem solving skills, a python developer 
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; A CSE undergraduate student with good algorithmic and problem solving skills, a python developer 
                             and a technology enthusiast. Looking forward to learn and solve challenging problems to fulfill 
                             the goals.</p>
-                        <br>
-                        <p>I am a keen learner, a highly motivated individual, and an inquisitive personality interested
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; I am a keen learner, a highly motivated individual, and an inquisitive personality interested
                             in making significant contributions and working on challenging ideas that hold the potential
                             to solve real-life problems.</p>
-                        <br>
-                        <p>As a Computer science Engineer, I enjoy the community and the challenges that the field
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; As a Computer science Engineer, I enjoy the community and the challenges that the field
                             brings as well as the opportunity to solve problems. I look forward to challenging myself on
                             a daily basis and excited to work alongside some of world's most brilliant minds.</p>
-
                     </div>
                 </div>
             </section>
