--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,6 @@
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
-<script type="text/javascript" src="js/index.min.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
 
 </html>
