--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
-    <meta property="og:description" content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
+    <meta name="description"
+        content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
+    <meta property="og:description"
+        content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta property="og:site_name" content="" />
     <meta property="og:title" content="">
     <meta property="og:image" itemprop="image"
@@ -242,17 +244,22 @@
                 </div>
                 <div class="aboutcontent">
                     <div class="abouttxt">
-                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp;I am currently pursuing my Bachelor's degree in Computer Science from Lovely Professional
-                            University, Punjab. I’m excited to find a role where I can accomplish my goals and expand 
+                        <p><i class="far fa-dot-circle inthemef"></i> &nbsp;I am currently pursuing my Bachelor's degree
+                            in Computer Science from Lovely Professional
+                            University, Punjab. I’m excited to find a role where I can accomplish my goals and expand
                             my current skillset while also learning, growing and contributing to a great organization
                             that aligns with my values.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; A CSE undergraduate student with good algorithmic and problem solving skills, a python developer 
-                            and a technology enthusiast. Looking forward to learn and solve challenging problems to fulfill 
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; A CSE undergraduate student with good
+                            algorithmic and problem solving skills, a python developer
+                            and a technology enthusiast. Looking forward to learn and solve challenging problems to
+                            fulfill
                             the goals.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; I am a keen learner, a highly motivated individual, and an inquisitive personality interested
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; I am a keen learner, a highly motivated
+                            individual, and an inquisitive personality interested
                             in making significant contributions and working on challenging ideas that hold the potential
                             to solve real-life problems.</p>
-                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; As a Computer science Engineer, I enjoy the community and the challenges that the field
+                        <p><i class="far fa-dot-circle inthemef"></i>&nbsp; As a Computer science Engineer, I enjoy the
+                            community and the challenges that the field
                             brings as well as the opportunity to solve problems. I look forward to challenging myself on
                             a daily basis and excited to work alongside some of world's most brilliant minds.</p>
                     </div>
@@ -276,7 +283,8 @@
                                     </div>
                                 </div>
                                 <div class="prdisc">
-                                    <p>My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth.</p>
+                                    <p>My portfolio is a collection and reflection of my experiences to get a clearer
+                                        picture of my growth.</p>
                                 </div>
                             </div>
                             <div class="prshidonoff" id="prshidonoffn1">
@@ -297,14 +305,14 @@
                                 <hr>
                                 <div class="prdeffooter">
                                     <!-- <div class="prdeffooterdiv inthemeb" onclick="window.open(`https://github.com/Shashank-mankala1`, '_blank');"> -->
-                                        <div class="prdeffooterdiv inthemeb" id="viewprojectn1" title="View project">
-                                            <i class="fas fa-external-link-alt"></i>
-                                        </div>
-                                        <div class="prdeffooterdiv inthemeb" id="viewrepon1" title="View GitHub repository">
-                                            <i class="fab fa-github"></i>
-                                        </div>
+                                    <div class="prdeffooterdiv inthemeb" id="viewprojectn1" title="View project">
+                                        <i class="fas fa-external-link-alt"></i>
+                                    </div>
+                                    <div class="prdeffooterdiv inthemeb" id="viewrepon1" title="View GitHub repository">
+                                        <i class="fab fa-github"></i>
                                     </div>
                                 </div>
+                            </div>
                         </div>
                         <!-- pr excel project -->
                         <div class="prs" id="prsn0">
@@ -766,7 +774,8 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"><em> <b>Summmer Training</b>  on Topic: "<b>Modern BigData analysis with SQL</b>"</em></p>
+                                    <p id="expercardintro"><em> <b>Summmer Training</b> on Topic: "<b>Modern BigData
+                                                analysis with SQL</b>"</em></p>
                                     <ul>
                                         <li>
                                             <p>Completed all weeks of course, scoring 100% on all assessments</p>
@@ -844,7 +853,8 @@
                             <div class="awardcardbody">
                                 <ul>
                                     <li>
-                                        SnackDown is India’s global programming event that invites coders from all over the world
+                                        SnackDown is India’s global programming event that invites coders from all over
+                                        the world
                                     </li>
                                     <li>
                                         I had qualified the qualification and Round-1A rounds.
@@ -1032,6 +1042,7 @@
     </div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+<!-- <script type="text/javascript" src="js/index.min.js"></script> -->
 <script type="text/javascript" src="js/index.js"></script>
 
 </html>
