--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <link rel="icon" type="image/png" href="img/mylogo1.png">
     <title>Shashank Mankala | Computer Science Engineer</title>
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- <link rel="stylesheet" media="screen and (max-width:1328px)" href="css/small1.css">
     <link rel="stylesheet" media="screen and (max-width:1153px)" href="css/small1-1.css">
     <link rel="stylesheet" media="screen and (max-width:1092px)" href="css/small2.css">
