--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
-    <meta property="og:description"
+    <meta name="author" content="Shashank Mankala">
+    <meta name="keywords" content="HTML, CSS, Javascript, JS, Shashank Mankala, portfolio, website">
+        <meta property="og:description"
         content="My portfolio is a collection and reflection of my experiences to get a clearer picture of my growth. The purpose of my portfolio is to track my learning and development throughout my undergraduate years.">
     <meta property="og:site_name" content="" />
     <meta property="og:title" content="">
@@ -22,16 +24,8 @@
     <link rel="icon" type="image/png" href="img/mylogo1.png">
     <title>Shashank Mankala | Computer Science Engineer</title>
     <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" media="screen and (max-width:1328px)" href="css/small1.css">
-    <link rel="stylesheet" media="screen and (max-width:1153px)" href="css/small1-1.css">
-    <link rel="stylesheet" media="screen and (max-width:1092px)" href="css/small2.css">
-    <link rel="stylesheet" media="screen and (max-width:995px)" href="css/small2-1.css">
-    <link rel="stylesheet" media="screen and (max-width:816px)" href="css/small3.css">
-    <link rel="stylesheet" media="screen and (max-width:668px)" href="css/small3-1.css">
-    <link rel="stylesheet" media="screen and (max-width:540px)" href="css/small4.css">
-    <link rel="stylesheet" media="screen and (max-width:450px)" href="css/small5.css">
-    <link rel="stylesheet" media="screen and (max-width:410px)" href="css/small6.css">
-    <link rel="stylesheet" media="screen and (max-width:392px)" href="css/small7.css"> -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9476714825436397"
+     crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -41,7 +35,6 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <div class="fullpage">
         <div class="overlayfull" id="overlayfull"></div>
